# goml-python-day1

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 3c270d21abf5_add_assignee_email.py  756ae6beb648_create_tickets_table.py
app/: main.py
app/api/: ai.py  ticket.py
app/core/: config.py  deps.py
app/db/: session.py
app/models/: ticket.py
app/repositories/: ticket_repository.py
app/schemas/: ticket.py
app/services/: bedrock_services.py  prompt_templates.py  prompt_templates.yaml  ticket_service.py
tests/: conftest.py  locustfile.py  profile_cprofile.py  test_api.py  test_routes.py  test_schemas.py  test_services.py
