[project]
name = "t1"
version = "0.1.0"
description = "FastAPI Ticket Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "boto3>=1.43.54",
    "fastapi>=0.139.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "locust>=2.46.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-docx>=1.2.0",
    "reportlab>=5.0.0",
    "snakeviz>=2.2.2",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
